Use session key for WebDav on CAS-only servers